# lzrr

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  all_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classstool_1_1lzrr_1_1DependencyArrayManager-members.html  classstool_1_1lzrr_1_1DependencyArrayManager.html  classstool_1_1lzrr_1_1FileReader-members.html  classstool_1_1lzrr_1_1FileReader.html  classstool_1_1lzrr_1_1IO-members.html  classstool_1_1lzrr_1_1IO.html  classstool_1_1lzrr_1_1LCPCompData2-members.html  classstool_1_1lzrr_1_1LCPCompData2.html  classstool_1_1lzrr_1_1LPIterater-members.html  classstool_1_1lzrr_1_1LPIterater.html  classstool_1_1lzrr_1_1LZ77-members.html  classstool_1_1lzrr_1_1LZ77.html  classstool_1_1lzrr_1_1LZFactor-members.html  classstool_1_1lzrr_1_1LZFactor.html  classstool_1_1lzrr_1_1LZRR-members.html  classstool_1_1lzrr_1_1LZRR.html  classstool_1_1lzrr_1_1LZWriter-members.html  classstool_1_1lzrr_1_1LZWriter.html  classstool_1_1lzrr_1_1LexParse-members.html  classstool_1_1lzrr_1_1LexParse.html  classstool_1_1lzrr_1_1MSDecompressor-members.html  classstool_1_1lzrr_1_1MSDecompressor.html  classstool_1_1lzrr_1_1MSFactor-members.html  classstool_1_1lzrr_1_1MSFactor.html  classstool_1_1lzrr_1_1MSFactorReferenceComp-members.html  classstool_1_1lzrr_1_1MSFactorReferenceComp.html  classstool_1_1lzrr_1_1PointCompare-members.html  classstool_1_1lzrr_1_1PointCompare.html  classstool_1_1lzrr_1_1Printer-members.html  classstool_1_1lzrr_1_1Printer.html  classstool_1_1lzrr_1_1SAConstructor-members.html  classstool_1_1lzrr_1_1SAConstructor.html  (+44 more)
.github/workflows/: doxygen.yml
examples/: text1  text2  text3
include/: all.hpp  lzrr.hpp
include/common/: cmdline.h  constants.hpp  dependency_array.hpp  io.h  lnf_array.hpp  lp.hpp  lz_factor.hpp  ms_decompressor.hpp  sa.hpp  sa_lcp.hpp  union_find.hpp
include/debug/: debug_lzrr.hpp  print.hpp  randstr.hpp
include/parse/: lcpcomp2.hpp  lexparse.hpp  lz77.hpp  lzrr.hpp
lib/common/: dependency_array.cpp  lnf_array.cpp  lz_factor.cpp  sa_lcp.cpp  union_find.cpp
lib/debug/: debug_lzrr.cpp  randstr.cpp
lib/parse/: lcpcomp2.cpp  lexparse.cpp  lz77.cpp  lzrr.cpp
main/: compress_main.cpp  decompress_main.cpp  delta_main.cpp  lightweight_delta_main.cpp  lightweight_delta_main.hpp  rev_main.cpp
scripts/: compress.sh  lightweight_compress.sh  lightweight_compress_mac.sh  rev_compress.sh
search/: all_0.js  all_1.js  all_5.js  all_6.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  searchdata.js
src/common/: constants.hpp  dependency_array.cpp  dependency_array.hpp  io.h  lnf_array.cpp  lnf_array.hpp  lp.hpp  lz_factor.cpp  lz_factor.hpp  sa_lcp.cpp  sa_lcp.hpp  union_find.cpp  union_find.hpp
src/debug/: debug_lzrr.cpp  debug_lzrr.hpp  print.hpp  randstr.cpp
src/parse/: lcpcomp.cpp  lcpcomp.hpp  lcpcomp2.cpp  lcpcomp2.hpp  lexparse.cpp  lexparse.hpp  lz77.cpp  lz77.hpp  lzrr.cpp  lzrr.hpp
test/: compress.sh  download_pizza_chili_corpus.sh
